--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@react-icons/all-files": "^4.1.0",
+    "@tabler/icons-react": "^3.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
@@ -18,11 +21,15 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "boxicons": "^2.1.4",
+    "clsx": "^2.1.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "schema-to-yup": "^1.12.18",
+    "tailwind-merge": "^2.2.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
