--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "boxicons": "^2.1.4",
     "clsx": "^2.1.0",
     "framer-motion": "^6.5.1",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
