--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@react-icons/all-files": "^4.1.0",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,15 +24,21 @@
     "@types/react-dom": "^18.2.15",
     "boxicons": "^2.1.4",
     "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
+    "grapheme-splitter": "^1.0.4",
+    "my-app": "file:",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^3.11.0",
+    "react-intersection-observer": "^9.14.1",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "schema-to-yup": "^1.12.18",
     "tailwind-merge": "^2.2.2",
+    "three": "^0.170.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
